--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     </header>
     
     <main class="content">
-      <h3 id="title">SCORE : <span id="result"></span></h3>
+      <h3 id="title"></h3>
+      <h3>SCORE : <span id="result"></span></h3>
       
       <div class="grid">
 
